--- a/dicoding-blog/src/index.html
+++ b/dicoding-blog/src/index.html
@@ -37,8 +37,11 @@
       </div>
     </div>
     <main>
+      <a id="hamburger" href="#">☰</a>
+      <h1>This is main content</h1>
+      <p>Tekan pada tombol hamburger button untuk membuka Menu</p>
       <section class="content">
-        <article class="headline">
+        <!-- <article class="headline">
           <figure class="headline__figure">
             <img src="images/headline.png" alt="Dicoding Fact Sheet" />
             <figcaption>
@@ -58,7 +61,7 @@
             </p>
             <button class="headline__button">Read More</button>
           </div>
-        </article>
+        </article> -->
         <div class="latest">
           <h1 class="latest__label">Latest Post</h1>
           <div class="posts">
